tests/ui/invalid_buffer_flags_duplicate_format.stderr
error[E0599]: the method `format` exists for struct `PyBufferRequest<buffer::py_buffer_flags::PyBufferFlags<true, true, true, false, true, 0>>`, but its trait bounds were not satisfied
 --> tests/ui/invalid_buffer_flags_duplicate_format.rs:4:49
  |
4 |       let _ = PyBufferRequest::strided().format().format();
  |                                                   ^^^^^^ method cannot be called due to unsatisfied trait bounds
  |
 ::: src/buffer.rs
  |
  | /     pub struct PyBufferFlags<
  | |         const FORMAT: bool,
  | |         const SHAPE: bool,
  | |         const STRIDE: bool,
... |
  | |         const CONTIGUITY: u8,
  | |     >;
  | |_____- doesn't satisfy `_: CanRequestFormat`
  |
  = note: the following trait bounds were not satisfied:
          `buffer::py_buffer_flags::PyBufferFlags<true, true, true, false, true, 0>: buffer::py_buffer_flags::CanRequestFormat`
