tests/ui/invalid_buffer_flags_duplicate_format.rs
use pyo3::buffer::PyBufferRequest;

fn main() {
    let _ = PyBufferRequest::strided().format().format();
}
